static/css/app.css
html {
  font-size: 62.5%;
  font-family: libre baskerville, Georgia, serif;
  color: #494c4e;
  -webkit-font-smoothing: antialiased;
}
body {
  border: 8px solid #494c4e;
  margin: 0;
}
h1,
h2,
h3,
h4,
h5,
h6,
li {
  font-weight: 700;
  margin: 0;
}
h3,
h4 {
  font-family: namun gothic, Arial, sans-serif;
  font-weight: 700;
}
h1 {
  font-size: 2.3em;
  line-height: 1.5em;
  margin-bottom: 1em;
}
h2,
blockquote {
  font-size: 2em;
  line-height: 1.5em;
  margin-bottom: 0.5em;
}
h3 {
  font-size: 1.65em;
  line-height: 1em;
  margin-bottom: 2em;
  color: #f6ac00;
  text-transform: uppercase;
}
h4 {
  font-size: 1.25em;
  line-height: 1em;
  margin-bottom: 1.5em;
  color: #f6ac00;
  text-transform: uppercase;
}
h5,
li.list-item {
  font-size: 1.5em;
  line-height: 1em;
}
ol {
  font-size: 1.5em;
}
ol li {
  margin-bottom: 1.5em;
  padding-bottom: 1em;
}
li {
  margin-bottom: 1.5em;
  padding-bottom: 2em;
}
p {
  font-size: 1.5em;
  line-height: 2em;
  margin-bottom: 1.5em;
}
blockquote {
  text-align: center;
  margin: 0;
  margin-bottom: 2em;
  padding: 1em;
}
blockquote p {
  font-size: 1.25em;
  line-height: 1.5em;
  margin-bottom: 0.5em;
}
blockquote:before,
blockquote:after {
  content: "";
  display: inline-block;
  text-align: center;
  width: 100px;
}
blockquote:before {
  border-top: 1px solid #f6ac00;
}
blockquote:after {
  border-bottom: 1px solid #f6ac00;
}
img {
  /* display: inline; */
  height: 120px;
  width: 120px;
  border-radius: 50%;
  margin: 0 3em 4em 0;
  background-color: #f0eeee;
}
.thumbnail {
  margin-bottom: 3em;
}
.thumbnail:hover {
  opacity: 0.7;
}
a {
  color: #494c4e;
  text-decoration: none;
  margin-bottom: 1.25em;
  font-weight: 700;
}
a.yellow,
.post a {
  text-decoration: underline;
}
a.yellow:hover,
.post a:hover {
  opacity: 0.75;
}
a:hover .arrow-right {
  transform: translateX(5px);
  transition: all 0.25s ease;
  display: inline-block;
}
a:hover .arrow-left {
  transform: translateX(-5px);
  transition: all 0.25s ease;
  display: inline-block;
}
.border {
  border-top: 1px solid #f0eeee;
}
.border-bottom {
  border-bottom: 1px solid #f0eeee;
}
.yellow {
  color: #f6ac00;
}
.light-grey {
  color: #f0eeee;
}
.space-bottom {
  margin-bottom: 4em;
}
.spacer {
  padding-top: 3em;
  padding-bottom: 3em;
}

span {
  color: #f6ac00;
}
ul.no-bullet {
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-padding-start: 0;
}
ul.no-bullet li {
  list-style: none;
}
ul.no-bullet li:last-child {
  border-bottom: 0;
}
.cta-button {
  border-radius: 5px;
  border: 1px solid #f6ac00;
  padding: 1em 1.5em;
  display: inline-block;
  font-size: 1.5em;
  font-style: italic;
  margin: 0 1em;
  margin-bottom: 1em;
  min-width: 10em;
  transition: all 0.25s ease;
}
.cta-button:hover {
  transform: scale(1.025);
  transition: all 0.25s ease;
}
.read-more {
  font-style: italic;
  font-size: 1.5em;
  margin-bottom: 2em;
}
.arrow-right,
.arrow-left {
  display: inline-block;
  transition: all 0.25s ease;
}
.arrow-right {
  padding-left: 10px;
}
.arrow-left {
  padding-right: 10px;
}
.outer-container {
  max-width: 80em;
  margin-left: auto;
  margin-right: auto;
  position: sticky;
  top: 0;
  background-color: white;
}
.outer-container::after {
  clear: both;
  content: "";
  display: table;
}
.inner-container {
  max-width: 80em;
  margin-left: auto;
  margin-right: auto;
}
/* .inner-container::after {
  clear: both;
  content: "";
  display: table;
} */
.inner-container,
.outer-container {
  padding-left: 2em;
  padding-right: 2em;
}
.nav-container {
  padding-top: 4em;
  padding-bottom: 2em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  
}
.nav-right {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
.list-item {
  padding: 0;
  list-style: none;
}
.list-item:not(:first-child) {
  margin-left: 2em;
}
.list-item a {
  font-size: 1em;
  color: #494c4e;
  text-decoration: none;
}
.list-item a:hover {
  border-bottom: 2px solid #f6ac00;
  opacity: 1;
}
.site-logo {
  width: 50px;
  height: 50px;
  display: block;
  overflow: visible;
  border: 5px solid #494c4e;
  position: relative;
  transform: rotate(0deg);
  transition: transform 0.4s ease-in-out;
  flex-shrink: 0;
}
.site-logo .logo-text {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(0deg);
  transition: transform 0.4s ease-in-out;
  font-weight: 700;
  font-size: 13px;
}
.site-logo:hover {
  opacity: 1;
  transform: rotate(-90deg);
  transition: transform 0.4s ease-in-out;
}
.site-logo:hover .logo-text {
  transform: translate(-50%, -50%) rotate(90deg);
  transform-origin: center;
}
.site-logo:hover #logo-stroke {
  transform: rotate(-90deg);
  transform-origin: center center;
  transition: transform 0.5s ease-in-out;
}
.social-icon {
  display: none;
}
.social-icon a:hover {
  color: #f6ac00;
  border-bottom: 0;
}
.mobile-nav {
  display: none;
  float: right;
}
.dropdown-menu {
  display: none;
  text-align: left;
}
.dropdown-menu li {
  list-style: none;
  font-size: 1.5em;
  margin-bottom: 0.5em;
  padding-left: 10px;
}
.navigation-target {
  display: none;
}
.mobile-menu-toggle {
  float: right;
}
.navigation-toggle {
  width: 30px;
  height: 40px;
  display: block;
  position: relative;
  cursor: pointer;
  display: inline-block;
  margin-top: 0.85em;
}
.navigation-toggle-label {
  font-weight: 700;
  font-size: 18px;
  color: #494c4e;
  text-align: center;
  display: block;
  position: relative;
  text-transform: uppercase;
  left: -60px;
  bottom: 12px;
}
.navigation-toggle-icon {
  border-bottom: 4px solid #494c4e;
  padding-top: 12px;
  display: block;
}
.navigation-toggle-icon:before,
.navigation-toggle-icon:after {
  border-top: 4px solid #494c4e;
  content: "";
  position: absolute;
  left: 0;
  right: 0;
}
.navigation-toggle-icon:before {
  top: 2px;
}
.navigation-toggle-icon:after {
  bottom: 14px;
}
.navigation-toggle-icon,
.navigation-toggle-icon:before,
.navigation-toggle-icon:after {
  transition-property: transform, border-color;
  transition-duration: 0.25s;
  transition-timing-function: cubic-bezier(0.5, -0.5, 0.5, 1.5);
}
.navigation-toggle-icon {
  transition-delay: 0.125s;
}
.navigation-toggle-icon:before,
.navigation-toggle-icon:after {
  transition-delay: 0s;
  transform-origin: center;
}
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon {
  transition-delay: 0s;
}
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon:before,
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon:after {
  transition-delay: 0.125s;
}
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon:before {
  transform: translateY(10px) rotate(135deg);
}
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon {
  border-color: transparent;
}
.navigation-target.clicked + .navigation-toggle .navigation-toggle-icon:after {
  transform: translateY(-10px) rotate(-135deg);
}
.hero {
  display: flex;
  flex-direction: row;
  align-content: center;
  padding-top: 6em;
  padding-bottom: 2em;
}
footer,
.cta-section {
  text-align: center;
  padding-top: 3em;
  padding-bottom: 4em;
}
.blog-list,
.project-list {
  padding-top: 6em;
  padding-bottom: 1em;
}
.project-list li {
  padding-top: 3em;
  padding-bottom: 1em;
}
.post-list li a {
  text-decoration: none;
}
.blog-list li {
  padding-top: 2em;
  padding-bottom: 3em;
}
.blog-body {
  padding-top: 6em;
  padding-bottom: 3em;
}
.blog-body li {
  font-size: 1.5em;
}
.card {
  position: relative;
  margin-bottom: 3em;
}
.card:hover .overlay-button {
  opacity: 1;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  transition: all 0.5s ease;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
.card:hover .overlay {
  opacity: 0.8;
  -webkit-transition: all 0.25s ease;
  -moz-transition: all 0.25s ease;
  transition: all 0.25s ease;
}
.card img {
  margin: 0 auto;
  max-width: 100%;
}
.card .overlay-button {
  opacity: 0;
  color: #fff;
  text-align: center;
  position: absolute;
  top: 48%;
  left: 48%;
  -webkit-transform: translate(-50%, -10%);
  -moz-transform: translate(-50%, -10%);
  -ms-transform: translate(-50%, -10%);
  -o-transform: translate(-50%, -10%);
  transform: translate(-50%, -10%);
  -webkit-transition: all 0.25s ease;
  -moz-transition: all 0.25s ease;
  transition: all 0.25s ease;
  z-index: 3;
}
.card .overlay {
  opacity: 0;
  position: absolute;
  background-color: #494c4e;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
}

